{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 169,
  "lineage": "0c825254-fd6b-01af-3752-83ddd52df61e",
  "resources": [
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:internet-gateway/igw-08d716fc5d79dda53",
            "id": "igw-08d716fc5d79dda53",
            "owner_id": "519848832066",
            "region": "us-east-1",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:loadbalancer/app/node-alb/f1823981818567b9",
            "arn_suffix": "app/node-alb/f1823981818567b9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-alb-1317956139.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:519848832066:loadbalancer/app/node-alb/f1823981818567b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06b40e0cf3c933698"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06817dc3e95dd2885"
              },
              {
                "subnet_id": "subnet-079f748563ecc13aa"
              }
            ],
            "subnets": [
              "subnet-06817dc3e95dd2885",
              "subnet-079f748563ecc13aa"
            ],
            "vpc_id": "vpc-0d48f9d62232c2b75",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:loadbalancer/app/node-alb/f1823981818567b9"
          },
          "dependencies": [
            "module.node_app.aws_security_group.alb_sg",
            "module.node_app.aws_subnet.public_1",
            "module.node_app.aws_subnet.public_2",
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:listener/app/node-alb/f1823981818567b9/c17d52c72a8bbf24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:targetgroup/node-tg/78b42ab47a9d417a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:519848832066:listener/app/node-alb/f1823981818567b9/c17d52c72a8bbf24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:loadbalancer/app/node-alb/f1823981818567b9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:listener/app/node-alb/f1823981818567b9/c17d52c72a8bbf24"
          },
          "dependencies": [
            "module.node_app.aws_lb.alb",
            "module.node_app.aws_lb_target_group.tg",
            "module.node_app.aws_security_group.alb_sg",
            "module.node_app.aws_subnet.public_1",
            "module.node_app.aws_subnet.public_2",
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:targetgroup/node-tg/78b42ab47a9d417a",
            "arn_suffix": "targetgroup/node-tg/78b42ab47a9d417a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:519848832066:targetgroup/node-tg/78b42ab47a9d417a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:519848832066:loadbalancer/app/node-alb/f1823981818567b9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:519848832066:targetgroup/node-tg/78b42ab47a9d417a"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:security-group/sg-06b40e0cf3c933698",
            "description": "Allow HTTP traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b40e0cf3c933698",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "519848832066",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "sg-06b40e0cf3c933698",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:security-group/sg-087f05014493772e7",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087f05014493772e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b40e0cf3c933698"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "519848832066",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "sg-087f05014493772e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_security_group.alb_sg",
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:subnet/subnet-0db563cab41c0ef8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db563cab41c0ef8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519848832066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "subnet-0db563cab41c0ef8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:subnet/subnet-0d4dc2e5be728051e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4dc2e5be728051e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519848832066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "subnet-0d4dc2e5be728051e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:subnet/subnet-06817dc3e95dd2885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06817dc3e95dd2885",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519848832066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "subnet-06817dc3e95dd2885",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:subnet/subnet-079f748563ecc13aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079f748563ecc13aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519848832066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d48f9d62232c2b75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "subnet-079f748563ecc13aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.node_app.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.node_app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.node_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519848832066:vpc/vpc-0d48f9d62232c2b75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6777e6d67b46ef5",
            "default_route_table_id": "rtb-00ae2f215f7f2e57d",
            "default_security_group_id": "sg-0802cbb72d8c9712f",
            "dhcp_options_id": "dopt-0c8871f14a13e312f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d48f9d62232c2b75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ae2f215f7f2e57d",
            "owner_id": "519848832066",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519848832066",
            "id": "vpc-0d48f9d62232c2b75",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}